--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 nav {
     width: 100%;
     height: 80px;
-    background-color: rgb(167, 248, 248);
+
 }
 
 .menu {
@@ -15,11 +15,17 @@ nav {
     display: flex;
     justify-content: end;
     align-items: center;
+    margin-top: 10px;
 }
 
 .menu a {
     font-size: 17px;
-    border: 1px solid green;
     padding: 2%;
     margin-right: 2%;
+    text-decoration: none;
+    color: blue;
+}
+
+.menu a:hover {
+    border-top: 5px solid rgb(239, 91, 224);
 }
