--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 * {
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
+
 }
 
 nav {
     width: 100%;
     height: 80px;
+    background-color: #2f3559;
 
 }
 
@@ -15,17 +16,54 @@ nav {
     display: flex;
     justify-content: end;
     align-items: center;
-    margin-top: 10px;
+    border-bottom: 2px solid grey;
+
 }
 
 .menu a {
     font-size: 17px;
     padding: 2%;
+    margin-top: 10px;
     margin-right: 2%;
     text-decoration: none;
-    color: blue;
+    color: #e394a7;
 }
 
 .menu a:hover {
-    border-top: 5px solid rgb(239, 91, 224);
+    border-top: 5px solid #9a5071;
+}
+
+section {
+    height: 545px;
+    margin-left: 7%;
+}
+
+.corpo {
+    margin-top: 10%;
+    font-size: 30px;
+    /* border: 1px solid blue;*/
+}
+
+.corpo button {
+    padding: 10px;
+    margin-top: 20px;
+    width: 250px;
+    height: 50px;
+    border-radius: 200px;
+    font-size: 20px;
+    background-color: #2f3559;
+}
+
+
+.corpo button a {
+    text-decoration: none;
+    color: #e394a7;
+}
+
+.corpo button:hover {
+    background-color: #e394a7;
+}
+
+.corpo button a:hover {
+    color: #2f3559;
 }
