--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ nav {
     width: 100%;
     height: 80px;
     background-color: #2f3559;
-
+    border-bottom: 5px solid grey;
 }
 
 .menu {
@@ -16,7 +16,6 @@ nav {
     display: flex;
     justify-content: end;
     align-items: center;
-    border-bottom: 10px solid rgb(157, 20, 20);
 
 }
 
@@ -26,15 +25,15 @@ nav {
     margin-top: 10px;
     margin-right: 2%;
     text-decoration: none;
-    color: #e394a7;
+    color: white;
 }
 
 .menu a:hover {
-    border-top: 5px solid #9a5071;
+    border-top: 5px solid #394E98;
 }
 
 section {
-    height: 545px;
+    height: 540px;
     padding-left: 7%;
     background-color: #394E98;
 }
@@ -42,12 +41,11 @@ section {
 .corpo {
     padding-top: 9%;
     font-size: 30px;
-    /* border: 1px solid blue;*/
 }
 
 .corpo button {
     padding: 10px;
-    margin-top: 20px;
+    margin-top: 25px;
     width: 250px;
     height: 50px;
     border-radius: 200px;
@@ -55,16 +53,17 @@ section {
     background-color: #2f3559;
 }
 
-
 .corpo button a {
     text-decoration: none;
-    color: #e394a7;
+    color: white;
 }
 
 .corpo button:hover {
-    background-color: #e394a7;
-    border: 1px solid #2f3559;
+    background-color: #9a5071;
 }
+
+
+
 
 img {
     float: right;
